# glance

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  REMAINING-TASKS.md  agents.md  docker-compose.yml  implementation-status.md  investigation.md  justfile  plan.md  v0.2-plan.md  v0.2b-plan.md  v0.2d-plan.md
.cargo/: config.dev.toml  config.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  BACKLOG.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  ROADMAP.md  TECH_STACK.md  TESTING.md  USAGE.md  VISION.md  scalability-review.md
docs/specs/: v0.1.md  v0.2a.md  v0.2b.md  v0.2c.md  v0.2d.md  v0.2e.md  v0.3.md
src/: app.rs  cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs
src/commands/: definitions.rs  help.rs  mod.rs  output.rs  router.rs  tokenizer.rs
src/connection/: manager.rs  mod.rs
src/db/: mock.rs  mod.rs  postgres.rs  schema.rs  types.rs
src/llm/: anthropic.rs  factory.rs  manager.rs  mock.rs  mod.rs  ollama.rs  openai.rs  parser.rs  prompt.rs  service.rs  tools.rs  types.rs
src/persistence/: connections.rs  history.rs  llm_settings.rs  migrations.rs  mod.rs  saved_queries.rs  secrets.rs
src/query/: executor.rs  mod.rs
src/safety/: mod.rs  parser.rs
src/tui/: app.rs  clipboard.rs  events.rs  history.rs  mod.rs  orchestrator_actor.rs  output_adapter.rs  progress_reporter.rs  request_queue.rs  sql_autocomplete.rs  text.rs  ui.rs
tests/: integration_tests.rs
tests/fixtures/: seed.sql
tests/integration/: connection_test.rs  mod.rs  persistence_test.rs  query_test.rs  (+2 more)
(+34 files in other folders)
