[package]
name = "db-glance"
version = "0.1.0"
edition = "2021"
authors = ["Sophie Ferenczy"]
description = "A lightweight, AI-first database viewer"
license = "MIT"
repository = "https://github.com/SFerenczy/glance"

readme = "README.md"
keywords = ["database", "postgres", "tui", "llm", "sql"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "glance"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls"] }

# HTTP client (for LLM APIs)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# SQL parsing (for safety classification)
sqlparser = "0.50"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
dirs = "5.0"
url = "2.5"
arboard = "3.6.1"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
